[gd_scene load_steps=23 format=3 uid="uid://lgv8bv8hinkx"]

[ext_resource type="Script" uid="uid://dc8gw6mf1hhk5" path="res://microgames/responsibility/responsibility.gd" id="1_m5tbx"]
[ext_resource type="Shader" uid="uid://dgluxy158pipy" path="res://microgames/responsibility/background.gdshader" id="2_k7pvh"]
[ext_resource type="FontFile" uid="uid://sa1ml6cgmorr" path="res://assets/fonts/Share Tech Mono/ShareTechMono-Regular.ttf" id="3_bxowm"]
[ext_resource type="Texture2D" uid="uid://2p4glia1radm" path="res://microgames/responsibility/assets/person.svg" id="3_ggckw"]
[ext_resource type="Texture2D" uid="uid://dxltpixkqs7v8" path="res://microgames/responsibility/assets/arrow.svg" id="5_we2d5"]

[sub_resource type="Animation" id="Animation_ggckw"]
resource_name = "jump"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:custom_minimum_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 35), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_bxowm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:custom_minimum_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../../../CanvasLayer2/Player/Control:custom_minimum_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_we2d5"]
resource_name = "jitter"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../../../CanvasLayer2/Player/Control:custom_minimum_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(10, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_we2d5"]
_data = {
&"RESET": SubResource("Animation_bxowm"),
&"jitter": SubResource("Animation_we2d5"),
&"jump": SubResource("Animation_ggckw")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ggckw"]
shader = ExtResource("2_k7pvh")
shader_parameter/stripe_size = 100.0
shader_parameter/speed = 3.0
shader_parameter/stripe1 = Color(0.499933, 0.0186826, 0.260106, 1)
shader_parameter/stripe2 = Color(0.312575, 0.0771511, 2.40654e-08, 1)
shader_parameter/rotation = 14.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_we2d5"]
content_margin_left = 0.0
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_5x86v"]
font = ExtResource("3_bxowm")
font_size = 26
font_color = Color(0, 0, 0, 1)
shadow_size = 3
shadow_color = Color(0.35, 0.35, 0.35, 0.368627)
shadow_offset = Vector2(2, 2)

[sub_resource type="Gradient" id="Gradient_bxowm"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.493506)
colors = PackedColorArray(0.6, 0.6, 0.6, 1, 0.51, 0.51, 0.51, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_we2d5"]
gradient = SubResource("Gradient_bxowm")
width = 40
height = 26
fill_to = Vector2(1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bxowm"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="Gradient" id="Gradient_we2d5"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.474026, 0.616883)
colors = PackedColorArray(0.686344, 0.395059, 0.442567, 1, 0.7, 0.309867, 0.084, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_5x86v"]
gradient = SubResource("Gradient_we2d5")
height = 20
fill = 1
fill_from = Vector2(0.522936, 0.499083)
fill_to = Vector2(0, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_k7pvh"]
shader = ExtResource("2_k7pvh")
shader_parameter/stripe_size = 100.0
shader_parameter/speed = -3.0
shader_parameter/stripe1 = Color(0, 0, 0, 1)
shader_parameter/stripe2 = Color(0.505932, 0.161652, 0, 1)
shader_parameter/rotation = 1.881

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k7pvh"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(1, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_bxowm"]
font = ExtResource("3_bxowm")
font_size = 40
outline_size = 8
outline_color = Color(0.262932, 0.262932, 0.262932, 1)
shadow_size = 8
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(3, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5x86v"]
bg_color = Color(0.89059, 0.89059, 0.89059, 1)
border_width_right = 6
border_width_bottom = 6
border_color = Color(0.581033, 0.581033, 0.581033, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_we2d5"]

[node name="Responsibility" type="Node2D"]
script = ExtResource("1_m5tbx")
time = 9.0

[node name="JumpAnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../CanvasLayer/VBoxContainer/HBoxContainer/VBoxContainer")
libraries = {
&"": SubResource("AnimationLibrary_we2d5")
}
autoplay = "jump"

[node name="JitterAnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../CanvasLayer/VBoxContainer/HBoxContainer/VBoxContainer")
libraries = {
&"": SubResource("AnimationLibrary_we2d5")
}
autoplay = "jitter"

[node name="Background" type="CanvasLayer" parent="."]

[node name="Background" type="Panel" parent="Background"]
material = SubResource("ShaderMaterial_ggckw")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0
alignment = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Control" type="Control" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(35.005, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_we2d5")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/VBoxContainer/HBoxContainer2/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="SpeechLabel" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer2/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_5x86v")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Control" type="Control" parent="CanvasLayer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_we2d5")
stretch_mode = 2

[node name="Control" type="Control" parent="CanvasLayer/VBoxContainer/HBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Control" type="Control" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/VBoxContainer/HBoxContainer/VBoxContainer"]
modulate = Color(0.89, 0.692717, 0.5785, 1)
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("3_ggckw")
expand_mode = 5
stretch_mode = 5

[node name="Control" type="Control" parent="CanvasLayer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Control2" type="Control" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Panel2" type="PanelContainer" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_bxowm")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer/Panel2"]
layout_mode = 2

[node name="Control" type="Control" parent="CanvasLayer/VBoxContainer/Panel2/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="LevelContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer/Panel2/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/VBoxContainer/Panel2/HBoxContainer/LevelContainer"]
layout_mode = 2
texture = SubResource("GradientTexture2D_5x86v")
stretch_mode = 4

[node name="Panel" type="PanelContainer" parent="CanvasLayer/VBoxContainer"]
material = SubResource("ShaderMaterial_k7pvh")
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_k7pvh")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/VBoxContainer/Panel"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "Flee from your responsibilities"
label_settings = SubResource("LabelSettings_bxowm")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label2" type="Label" parent="CanvasLayer/VBoxContainer/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Press"
label_settings = SubResource("LabelSettings_bxowm")
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/VBoxContainer/Panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5x86v")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/VBoxContainer/Panel/VBoxContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Panel" type="Panel" parent="CanvasLayer/VBoxContainer/Panel/VBoxContainer/HBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_we2d5")

[node name="Arrow" type="TextureRect" parent="CanvasLayer/VBoxContainer/Panel/VBoxContainer/HBoxContainer/PanelContainer/MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(12, 15)
texture = ExtResource("5_we2d5")
expand_mode = 5
stretch_mode = 5

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="Player" type="HBoxContainer" parent="CanvasLayer2"]
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 0

[node name="Control" type="Control" parent="CanvasLayer2/Player"]
layout_mode = 2

[node name="Texture" type="TextureRect" parent="CanvasLayer2/Player"]
modulate = Color(0.89, 0.692717, 0.5785, 1)
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 0
texture = ExtResource("3_ggckw")
expand_mode = 5
stretch_mode = 5

[node name="TextTimer" type="Timer" parent="."]
wait_time = 1.8
autostart = true

[connection signal="timeout" from="TextTimer" to="." method="new_text"]
